# image_coords_app

./: .gitignore  CODE_SIGNING_SETUP.md  MVC_MIGRATION_GUIDE.md  PERFORMANCE_REPORT.md  README.md  app_data.db  board_info.json  demonstrate_types.py  file_management_design.md  image_coords_app.spec  image_coords_settings.ini  lot_number_info.json  main.py  main_mvc.py  models.txt  performance_test.py  pyproject.toml  requirements.txt  test_callbacks.py  test_mvc.py  test_type_hints.py  test_ui_initialization.py  tkinter_component.md  worker.csv  座標追加呼び出しフロー.md
.github/workflows/: build-and-test.yml  build-executables.yml  release.yml
assets/icons/: app_icon.icns
docs/: API_REFERENCE.md  CoordinateModel_class_documentation.md  DEPLOYMENT.md  DEVELOPMENT.md  FileManager_class_documentation.md  ImageModel_class_documentation.md  MainController_class_documentation.md  PERFORMANCE_MONITORING.md  README.md  SECURITY.md  USER_MANUAL.md  WorkerModel_class_documentation.md  python_with_open_usage.md  座標追加呼び出しフロー.md
docs/utils/: FileManager_class_documentation.md
settings/: board_info.json  coords.txt  defects.txt  image_coords_settings.ini  lot_number_info.json  worker.txt
src/: coordinate_manager.py  coords.txt  file_manager.py  image_coords_app.py  image_coords_app.spec  ui_components.py  ui_components_base.py  ui_components_edit.py  ui_components_view.py  viewer_app.py  viewer_app.spec
src/controllers/: __init__.py  board_controller.py  coordinate_controller.py  file_controller.py  main_controller.py
src/db/: __init__.py  init_db.py  models.py  schema.py
(+26 files in other folders)
